# de-zoom-2025

./: .gitignore  README  pyproject.toml
1-docker-terraform/: Dockerfile  docker-compose.yml  homework.md  ingest.py  ingest_green.py
2-orchestration/: docker-compose.yml  kestra.md
2-orchestration/flows/: 02_postgres_taxi.yaml  02_postgres_taxi_scheduled.yaml  04_gcp_kv.yaml
3-data-warehouse/: async_web_gcs.py  bigquery.md  bq_def  dlt.ipynb  load_yellow_taxi_gcs.py  web_gcs.py
4-dbt/: dbt.md  hw.md
4-dbt/nytaxi/: dbt_project.yml
4-dbt/nytaxi/macros/: get_payment_type_description.sql
4-dbt/nytaxi/models/core/: fact_fhv_monthly_zone_traveltime_p90.sql  fact_fhv_trips.sql  fact_taxi_trips_monthly_fare_p95.sql  fact_taxi_trips_quarterly_revenue.sql  fact_trips.sql  schema.yml
4-dbt/nytaxi/models/staging/: schema.yml  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
5-batch/: hw.md  spark.ipynb  spark.md
